--- a/deployment/device-service.yaml
+++ b/deployment/device-service.yaml
@@ -127,10 +127,12 @@ metadata:
   name: device-service
   namespace: device-manager
   annotations:
+    cert-manager.io/cluster-issuer: "cluster-ca-issuer"
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: public
   rules:
-  - host: cluster.petewall.net
+  - host: internal.petewall.net
     http:
       paths:
       - path: /device/api/devices
