--- a/deployment/firmware-service.yaml
+++ b/deployment/firmware-service.yaml
@@ -89,10 +89,12 @@ metadata:
   name: firmware-service
   namespace: device-manager
   annotations:
+    cert-manager.io/cluster-issuer: "cluster-ca-issuer"
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: public
   rules:
-  - host: cluster.petewall.net
+  - host: internal.petewall.net
     http:
       paths:
       - path: /devices/api/firmware
