--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,13 @@
         "node": true
     },
     "extends": "eslint:recommended",
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
+    "plugins": [
+        "cypress"
+    ],
     "rules": {
         "indent": [
             "error",
