--- a/ci/pipeline-values.yaml
+++ b/ci/pipeline-values.yaml
@@ -2,19 +2,25 @@
 ---
 services:
 - name: device-service
-  repo: git@github.com:petewall/device-service.git
+  repo:
+      owner: petewall
+      name: device-service
   branch: main
   image:
     repo: petewall/device-service
     tag: latest
 - name: firmware-service
-  repo: git@github.com:petewall/firmware-service.git
+  repo:
+      owner: petewall
+      name: firmware-service
   branch: main
   image:
     repo: petewall/firmware-service
     tag: latest
 - name: ota-service
-  repo: git@github.com:petewall/ota-service.git
+  repo:
+      owner: petewall
+      name: ota-service
   branch: main
   image:
     repo: petewall/ota-service
