--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "env": {
         "browser": true,
+        "cypress/globals": true,
         "es2021": true,
         "jquery": true,
         "node": true
