WIP: going back to the tabbed layout
Signed-off-by: Pete Wall <pete@petewall.net>

--- a/test/device-template.yaml
+++ b/test/device-template.yaml
@@ -1,5 +1,6 @@
 #@ load("@ytt:data", "data")
 ---
+  name: new device
   mac: #@ data.values.mac
   currentFirmware: #@ data.values.currentFirmware
   currentVersion: #@ data.values.currentVersion
