Add proxies for the other services
Signed-off-by: Pete Wall <pete@petewall.net>

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/petewall/device-manager#readme",
   "dependencies": {
     "@fastify/helmet": "^10.1.0",
+    "@fastify/http-proxy": "^8.4.0",
     "@fastify/static": "^6.6.0",
     "@fastify/view": "^7.4.0",
     "ejs": "^3.1.8",
