--- a/package.json
+++ b/package.json
@@ -22,17 +22,15 @@
     "@fastify/helmet": "^10.1.0",
     "@fastify/http-proxy": "^8.4.0",
     "@fastify/static": "^6.8.0",
-    "@fastify/view": "^7.4.1",
-    "ejs": "^3.1.8",
     "fastify": "^4.12.0",
     "jquery": "^3.6.3",
-    "jquery-address": "^1.6.0",
-    "superagent": "^8.0.9"
+    "jquery-address": "^1.6.0"
   },
   "devDependencies": {
-    "cypress": "^12.5.1",
     "eslint": "^8.33.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "start-server-and-test": "^1.15.3"
+    "mocha": "^10.2.0",
+    "start-server-and-test": "^1.15.3",
+    "supertest": "^6.3.3"
   }
 }
